[gd_scene load_steps=4 format=2]

[ext_resource path="res://light.gdshader" type="Shader" id=1]
[ext_resource path="res://aa.gd" type="Script" id=2]

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 1 )
shader_param/pa = 1.0
shader_param/pw = 0.0
shader_param/phaser = 0.0
shader_param/pr = 0.0
shader_param/pg = 0.0
shader_param/pb = 0.0
shader_param/use_lfo = false

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="LfoButton" type="CheckButton" parent="."]
margin_left = 739.0
margin_top = 184.0
margin_right = 844.0
margin_bottom = 224.0
text = "LFO"

[node name="ColorMartix" type="VBoxContainer" parent="."]
margin_left = 736.0
margin_top = 82.0
margin_right = 917.0
margin_bottom = 138.0

[node name="r" type="HBoxContainer" parent="ColorMartix"]
margin_right = 181.0
margin_bottom = 16.0
size_flags_horizontal = 3

[node name="rSlider" type="HSlider" parent="ColorMartix/r"]
margin_right = 172.0
margin_bottom = 16.0
rect_pivot_offset = Vector2( 170, 16 )
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="ColorMartix/r"]
margin_left = 176.0
margin_top = 1.0
margin_right = 181.0
margin_bottom = 15.0
rect_pivot_offset = Vector2( 0, 16 )
text = "r"

[node name="g" type="HBoxContainer" parent="ColorMartix"]
margin_top = 20.0
margin_right = 181.0
margin_bottom = 36.0

[node name="gSlider" type="HSlider" parent="ColorMartix/g"]
margin_right = 170.0
margin_bottom = 16.0
rect_pivot_offset = Vector2( 170, 16 )
size_flags_horizontal = 3

[node name="Label3" type="Label" parent="ColorMartix/g"]
margin_left = 174.0
margin_top = 1.0
margin_right = 181.0
margin_bottom = 15.0
rect_pivot_offset = Vector2( 0, 16 )
text = "g"

[node name="b" type="HBoxContainer" parent="ColorMartix"]
margin_top = 40.0
margin_right = 181.0
margin_bottom = 56.0

[node name="bSlider" type="HSlider" parent="ColorMartix/b"]
margin_right = 169.0
margin_bottom = 16.0
rect_pivot_offset = Vector2( 170, 16 )
size_flags_horizontal = 3

[node name="Label4" type="Label" parent="ColorMartix/b"]
margin_left = 173.0
margin_top = 1.0
margin_right = 181.0
margin_bottom = 15.0
rect_pivot_offset = Vector2( 0, 16 )
text = "b"

[node name="Title" type="HBoxContainer" parent="."]
margin_left = 735.0
margin_top = 47.0
margin_right = 875.0
margin_bottom = 87.0

[node name="Label" type="Label" parent="Title"]
margin_top = 13.0
margin_right = 100.0
margin_bottom = 27.0
text = "Osc: A*sin(w+t)"

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource( 2 )
margin_left = 236.0
margin_top = 49.0
margin_right = 688.0
margin_bottom = 501.0

[node name="OscMartix" type="VBoxContainer" parent="."]
margin_left = 737.0
margin_top = 223.0
margin_right = 917.0
margin_bottom = 291.0

[node name="ampSlider" type="HSlider" parent="OscMartix"]
margin_right = 180.0
margin_bottom = 16.0
rect_pivot_offset = Vector2( 170, 16 )
size_flags_horizontal = 3

[node name="rateSlider" type="HSlider" parent="OscMartix"]
margin_top = 20.0
margin_right = 180.0
margin_bottom = 36.0
rect_pivot_offset = Vector2( 170, 16 )
size_flags_horizontal = 3

[node name="phaserSlider" type="HSlider" parent="OscMartix"]
margin_top = 40.0
margin_right = 180.0
margin_bottom = 56.0
rect_pivot_offset = Vector2( 170, 16 )
size_flags_horizontal = 3

[node name="amp" type="HBoxContainer" parent="OscMartix"]
margin_top = 60.0
margin_right = 180.0
margin_bottom = 60.0

[node name="rate" type="HBoxContainer" parent="OscMartix"]
margin_top = 64.0
margin_right = 180.0
margin_bottom = 64.0

[node name="phaser" type="HBoxContainer" parent="OscMartix"]
margin_top = 68.0
margin_right = 180.0
margin_bottom = 68.0

[node name="OscLabel" type="VBoxContainer" parent="."]
margin_left = 918.0
margin_top = 225.0
margin_right = 961.0
margin_bottom = 275.0

[node name="Label5" type="Label" parent="OscLabel"]
margin_right = 43.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 0, 16 )
text = "amp"

[node name="Label7" type="Label" parent="OscLabel"]
margin_top = 18.0
margin_right = 43.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 0, 16 )
text = "rate"

[node name="Label6" type="Label" parent="OscLabel"]
margin_top = 36.0
margin_right = 43.0
margin_bottom = 50.0
rect_pivot_offset = Vector2( 0, 16 )
text = "phaser"

[connection signal="toggled" from="LfoButton" to="." method="_on_LfoButton_toggled"]
[connection signal="value_changed" from="ColorMartix/r/rSlider" to="." method="_on_rSlider_value_changed"]
[connection signal="value_changed" from="ColorMartix/g/gSlider" to="." method="_on_gSlider_value_changed"]
[connection signal="value_changed" from="ColorMartix/b/bSlider" to="." method="_on_bSlider_value_changed"]
[connection signal="value_changed" from="OscMartix/ampSlider" to="." method="_on_ampSlider_value_changed"]
[connection signal="value_changed" from="OscMartix/rateSlider" to="." method="_on_rateSlider_value_changed"]
[connection signal="value_changed" from="OscMartix/phaserSlider" to="." method="_on_phaserSlider_value_changed"]
